# udp-relay

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  clang-format-code.sh
.github/: FUNDING.yml
.github/workflows/: linux.yml  make_release.yml  publish_docker_image.yml  windows.yml
cmake/: PreventInSourceBuilds.cmake  ProjectDefaults.cmake  ProjectOptions.cmake  Sanitizers.cmake  TestCompilerFeatures.cmake
cmake/preset/: msvc2022.cmake  msvc2026.cmake  ninja.cmake
include/udp-relay/: aligned_storage.hxx  circular_buffer.hxx  flat_map.hxx  guid.hxx  internetaddr.hxx  log.hxx  main_helpers.hxx  platform.h  relay.hxx  reldefs.h  ring_buffer.hxx  types.hxx  udpsocket.hxx  udpsocketFactory.hxx  utils.hxx  val_ref.hxx  version.hxx
include/udp-relay/net/: internetaddr.hxx  network_utils.hxx  socket_address.hxx  udpsocket.hxx
include/udp-relay/networking/: internetaddr.hxx  network_utils.hxx  udpsocket.hxx
include/udp-relay/relay/: relay_consts.hxx  relay_server.hxx  relay_specification.hxx  relay_types.hxx  relay_utils.hxx  relay_worker.hxx
include/udp-relay/unix/: internetaddrUnix.hxx  udpsocketUnix.hxx
include/udp-relay/win/: internetaddrWin.hxx  udpsocketWin.hxx
src/: arguments.hxx  internetaddr.cxx  log.hxx  main.cxx  real_main.cxx  relay_main.cxx  unixmain.cxx  winmain.cxx
src/networking/: internetaddr.cxx  network_utils.cxx  udpsocket.cxx
src/relay/: relay.cxx  relay.hxx  relay_server.cxx  relay_worker.cxx  types.hxx
src/socket/: internetaddr.hxx  udpsocket.hxx  udpsocketFactory.cxx  udpsocketFactory.hxx
src/socket/unix/: internetaddrUnix.cxx  internetaddrUnix.hxx  udpsocketUnix.cxx  udpsocketUnix.hxx
src/socket/win/: internetaddrWin.cxx  internetaddrWin.hxx  udpsocketWin.cxx  udpsocketWin.hxx
src/udp-relay/: aligned_storage.cxx  guid.cxx  log.cxx  relay.cxx  relay_main.cxx  unixmain.cxx  utils.cxx  val_ref.cxx  version.cxx  version.cxxm  winmain.cxx
src/udp-relay-healthcheck/: relay_healthcheck_main.cxx  unixmain.cxx  winmain.cxx
src/udp-relay-healthchecker/: relay_healthchecker_main.cxx  unixmain.cxx  winmain.cxx
src/udp-relay/net/: internetaddr.cxx  network_utils.cxx  socket_address.cxx  udpsocket.cxx
src/utils/: log.hxx
test/: CMakeLists.txt
test/client/: CMakeLists.txt
test/client/include/udp-relay-client/: client.hxx
test/client/src/: client.cxx
test/tester/: CMakeLists.txt
test/tester/include/: client.hxx
test/tester/src/: client.cxx  real_main.cxx  tester_main.cxx  unixmain.cxx  winmain.cxx
